# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: coverage.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_created_at_alter_label_name.py
labels/templates/labels/: delete.html  form.html  index.html
statuses/: forms.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_created_at_alter_status_name.py
statuses/templates/statuses/: delete.html  form.html  index.html
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html  login.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_created_at_and_more.py
tasks/templates/tasks/: delete.html  detail.html  form.html  index.html
users/: forms.py  tests.py  urls.py  views.py
users/templates/users/: delete.html  form.html  index.html
